etc/kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json-to-yaml
  labels:
    app.kubernetes.io/name: json-to-yaml
    app.kubernetes.io/instance: json-to-yaml
    app.kubernetes.io/version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: json-to-yaml
      app.kubernetes.io/instance: json-to-yaml
  template:
    metadata:
      labels:
        app.kubernetes.io/name: json-to-yaml
        app.kubernetes.io/instance: json-to-yaml
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: json-to-yaml
          image: "json-to-yaml:0.0.1-9064689"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthx
              port: 5000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
