etc/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-to-yaml
  labels:
    app.kubernetes.io/name: json-to-yaml
    app.kubernetes.io/instance: json-to-yaml
    app.kubernetes.io/version: "0.0.1"
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: json-to-yaml
    app.kubernetes.io/instance: json-to-yaml
